fix remove the overflow-x

--- a/Sass/base/_base.scss
+++ b/Sass/base/_base.scss
@@ -5,7 +5,7 @@
 }
 body {
   font-family: "Inter", serif;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 a {
   text-decoration: none;
