--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Inter", serif;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 a {
